<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="left"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SimpleActivity" >

    <TextView
        android:id="@+id/tvTipAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etBillAmount"
        android:layout_below="@+id/btn15"
        android:layout_marginTop="30dp"
        android:text="@string/label_tip_amount"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etBillAmount"
        android:layout_below="@+id/tvTipAmount"
        android:layout_marginTop="30dp"
        android:text="@string/label_total_amount"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btn15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etBillAmount"
        android:layout_below="@+id/tvPercentHint"
        android:onClick="onTipButton"
        android:tag="0.15"
        android:text="@string/tip_15_percent" />

    <Button
        android:id="@+id/btn18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn15"
        android:layout_alignBottom="@+id/btn15"
        android:layout_centerHorizontal="true"
        android:onClick="onTipButton"
        android:tag="0.18"
        android:text="@string/tip_18_percent" />

    <EditText
        android:id="@+id/etBillAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/switchSimple"
        android:layout_below="@+id/switchSimple"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/hint_enter_bill_amount" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tvPercentHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etBillAmount"
        android:layout_below="@+id/etBillAmount"
        android:layout_marginTop="20dp"
        android:hint="@string/label_choose_tip_amount" />

    <Button
        android:id="@+id/btn20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btn18"
        android:layout_alignBottom="@+id/btn18"
        android:layout_alignRight="@+id/switchSimple"
        android:onClick="onTipButton"
        android:tag="0.2"
        android:text="@string/tip_20_percent" />

    <Switch
        android:id="@+id/switchSimple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:checked="false"
        android:onClick="onSwitchToDetailed"
        android:text="@string/calculation_method"
        android:textOff="@string/capital_simple"
        android:textOn="@string/capital_detailed" />

</RelativeLayout>