<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="left"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".DetailedActivity" >

    <Switch
        android:id="@+id/switchSimple"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:checked="true"
        android:onClick="onSwitchToSimple"
        android:text="@string/calculation_method"
        android:textOff="@string/capital_simple"
        android:textOn="@string/capital_detailed" />

    <EditText
        android:id="@+id/etSubtotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/switchSimple"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:gravity="right"
        android:hint="@string/hint_subtotal"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/etTax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/etSubtotal"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:gravity="right"
        android:hint="@string/hint_tax"
        android:inputType="numberDecimal"
        android:selectAllOnFocus="true" />

    <SeekBar
        android:id="@+id/sbTipPercentage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvTipPercentageHint" />

    <TextView
        android:id="@+id/tvTipPercentageHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sbTipPercentage"
        android:layout_below="@+id/etTax"
        android:layout_marginTop="15dp"
        android:hint="@string/label_choose_tip" />

    <TextView
        android:id="@+id/tvTipDetailed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/tvSeekTip"
        android:layout_marginTop="30dp"
        android:text="@string/label_tip_amount"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvSeekTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/sbTipPercentage"
        android:layout_below="@+id/sbTipPercentage"
        android:text="@string/zero_percent"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvBeforeTaxHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvTipDetailed"
        android:layout_below="@+id/tvTipDetailed"
        android:hint="@string/label_based_on_subtotal"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/tvTotalDetailed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvBeforeTaxHint"
        android:layout_below="@+id/tvBeforeTaxHint"
        android:layout_marginTop="15dp"
        android:text="@string/label_total_amount"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvTaxLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etTax"
        android:layout_alignBottom="@+id/etTax"
        android:layout_alignParentLeft="true"
        android:text="@string/label_tax"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvSubtotalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/etSubtotal"
        android:layout_alignBottom="@+id/etSubtotal"
        android:layout_alignParentLeft="true"
        android:text="@string/label_subtotal"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvTipResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvTipDetailed"
        android:layout_alignBottom="@+id/tvTipDetailed"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/tvTotalResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvTotalDetailed"
        android:layout_alignBottom="@+id/tvTotalDetailed"
        android:layout_alignParentRight="true"
        android:gravity="right"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</RelativeLayout>